Add load-content script to package.json and integrate content routes in server.js

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "seed": "node src/utils/seeder.js"
+    "seed": "node src/utils/seeder.js",
+    "load-content": "node scripts/load-content.js"
   },
   "keywords": [],
   "author": "",
